src/strucvars/eval/dup/snapshots/scarus__strucvars__eval__dup__section2__test__evaluate@COL3A1-2H-pos-1.snap
---
source: src/strucvars/eval/dup/section2.rs
expression: res
---
- g2:
    g2h:
      suggested_score: 0
      hi_genes:
        - hgnc_id: "HGNC:2201"
          hgnc_symbol: COL3A1
          ensembl_gene_id: ENSG00000168542
          ncbi_gene_id: "1281"

