src/strucvars/eval/dup/snapshots/scarus__strucvars__eval__dup__section2__test__evaluate@ISCA-37405-2C-neg-1.snap
---
source: src/strucvars/eval/dup/section2.rs
expression: res
---
- G2:
    G2G:
      suggested_score: 0
      benign_region:
        isca_id: ISCA-37405
        isca_region_name: 2q13 recurrent region (includes NPHP1)
        genomic_location: "2:110862108-110983703"
        haploinsufficiency_score: GeneAssociatedWithRecessivePhenotype
        triplosensitivity_score: DosageSensitivityUnlikely
        haploinsufficiency_disease_id: ~
        triplosensitivity_disease_id: ~
      genes:
        - hgnc_id: "HGNC:39941"
          hgnc_symbol: LIMS4
          ensembl_gene_id: ENSG00000256671
          ncbi_gene_id: "100288695"
- G2:
    G2L:
      suggested_score: 0.45
      genes:
        - hgnc_id: "HGNC:6818"
          hgnc_symbol: MALL
          ensembl_gene_id: ENSG00000144063
          ncbi_gene_id: "7851"

