src/strucvars/eval/dup/snapshots/scarus__strucvars__eval__dup__section2__test__evaluate@ISCA-37405-2C-pos-1.snap
---
source: src/strucvars/eval/dup/section2.rs
expression: res
---
- g2:
    g2c:
      suggested_score: -1
      benign_regions:
        - iscaId: ISCA-37405
          iscaRegionName: 2q13 recurrent region (includes NPHP1)
          genomicLocation: "chr2:110104531-110228181"
          haploinsufficiencyScore: CLINGEN_DOSAGE_SCORE_RECESSIVE
          triplosensitivityScore: CLINGEN_DOSAGE_SCORE_UNLIKELY

