src/strucvars/eval/dup/snapshots/scarus__strucvars__eval__dup__section2__test__evaluate@ISCA-37405-2C-pos-2.snap
---
source: src/strucvars/eval/dup/section2.rs
expression: res
---
- G2:
    G2C:
      suggested_score: -1
      benign_regions:
        - isca_id: ISCA-37405
          isca_region_name: 2q13 recurrent region (includes NPHP1)
          genomic_location: "2:110862108-110983703"
          haploinsufficiency_score: GeneAssociatedWithRecessivePhenotype
          triplosensitivity_score: DosageSensitivityUnlikely
          haploinsufficiency_disease_id: ~
          triplosensitivity_disease_id: ~

