src/strucvars/eval/dup/snapshots/scarus__strucvars__eval__dup__section2__test__evaluate@ISCA-37405-2E-pos-1.snap
---
source: src/strucvars/eval/dup/section2.rs
expression: res
---
- g2:
    g2e:
      suggested_score: 0
      benign_region:
        iscaId: ISCA-46459
        iscaRegionName: 11q14.3 population region (gnomAD-SV_v2.1_DUP_11_33042)
        genomicLocation: "chr11:89786909-89923863"
        haploinsufficiencyScore: CLINGEN_DOSAGE_SCORE_NO_EVIDENCE_AVAILABLE
        triplosensitivityScore: CLINGEN_DOSAGE_SCORE_UNLIKELY
      genes:
        - hgnc_id: "HGNC:14533"
          hgnc_symbol: UBTFL1
          ensembl_gene_id: ENSG00000255009
          ncbi_gene_id: "642623"
      functional_elements: []
- g2:
    g2l:
      suggested_score: 0
      genes:
        - hgnc_id: "HGNC:14533"
          hgnc_symbol: UBTFL1
          ensembl_gene_id: ENSG00000255009
          ncbi_gene_id: "642623"

